@@ -3,32 +3,31 @@ package sdmExam;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 
-public class EdgeShould {
+public class BoardSideShould {
     private final Board board = new Board();
 
 
     @TestFactory
-    Stream<DynamicTest> checkEdges() {
+    Stream<DynamicTest> checkAdjacentPositionToSides() {
 
         Position firstPosition = Position.in(1, 4);
         Position secondPosition = Position.in(13, 4);
         Position thirdPosition = Position.in(13, 1);
         Position fourthPosition = Position.in(1, 13);
 
-        List<Edge> edgesList = Arrays.asList(Edge.TOP, Edge.BOTTOM, Edge.LEFT, Edge.RIGHT);
-        List<Position> positionList = Arrays.asList(firstPosition, secondPosition, thirdPosition, fourthPosition);
+        List<BoardSide> sideList = List.of(BoardSide.TOP, BoardSide.BOTTOM, BoardSide.LEFT, BoardSide.RIGHT);
+        List<Position> positionList = List.of(firstPosition, secondPosition, thirdPosition, fourthPosition);
 
-        return edgesList.stream()
-                .map(edge -> DynamicTest.dynamicTest("Checking Edge " + edge,
+        return sideList.stream()
+                .map(side -> DynamicTest.dynamicTest("Checking Side " + side,
                         () -> {
-                            int index = edgesList.indexOf(edge);
-                            assertTrue(edge.isAdjacentTo(positionList.get(index)));
+                            int index = sideList.indexOf(side);
+                            assertTrue(side.isAdjacentTo(positionList.get(index)));
                         })
                 );
     }
